# rustainer

./: .gitignore  Cargo.toml  cleanup.sh  teste.sh
src/: main.rs
src/actions/: images.rs  ls.rs  mod.rs  pull.rs  rm.rs  run.rs  types.rs
